// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttachmentsTag component AttachmentsTag snapshot test should render correctly 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#E7ECEF",
        "borderRadius": 12,
        "flexDirection": "row",
        "height": 24,
      },
      undefined,
      Object {
        "opacity": 0,
      },
    ]
  }
>
  <Image
    source={
      Object {
        "uri": "https://asdas",
      }
    }
    style={
      Object {
        "borderRadius": 100,
        "height": 20,
        "marginLeft": 2,
        "marginRight": 4,
        "width": 20,
      }
    }
  />
  <Text
    style={
      Array [
        Object {
          "color": "#04142F",
          "fontFamily": "Roboto-Medium",
          "fontSize": 14,
          "letterSpacing": 0.16,
          "lineHeight": 22,
        },
        Object {
          "color": "#8A94A6",
          "marginRight": 8,
        },
        undefined,
      ]
    }
  >
    some text
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
        "flexGrow": 1,
        "justifyContent": "flex-end",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "marginLeft": 0.67,
          "marginRight": 4.67,
          "opacity": 1,
        }
      }
    >
      <View>
        <Text
          style={
            Object {
              "color": "#8A94A6",
              "fontFamily": "alldone",
              "fontSize": 16,
              "opacity": 1,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`AttachmentsTag component AttachmentsTag snapshot test should render correctly 2`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#E7ECEF",
        "borderRadius": 12,
        "flexDirection": "row",
        "height": 24,
      },
      undefined,
      Object {
        "opacity": 0,
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "flexDirection": "row",
        "marginLeft": 5.33,
        "marginRight": 7.33,
      }
    }
  >
    <View>
      <Text
        style={
          Object {
            "color": "#8A94A6",
            "fontFamily": "alldone",
            "fontSize": 16,
            "opacity": 1,
          }
        }
      >
        
      </Text>
    </View>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#04142F",
          "fontFamily": "Roboto-Medium",
          "fontSize": 14,
          "letterSpacing": 0.16,
          "lineHeight": 22,
        },
        Object {
          "color": "#8A94A6",
          "marginRight": 8,
        },
        undefined,
      ]
    }
  >
    some text
  </Text>
</View>
`;
